added final changes